updated quiz 2